--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
 	"version": "0.0.1",
 	"description": "",
 	"types": "types/index",
-	"main": "lib/index.js",
+	"main": "dist/index.js",
 	"scripts": {
-		"start": "node ./lib/index.js",
-		"start:dev": "node --inspect=9222 -r ts-node/register ./src/index.ts",
+		"start": "node --inspect=0.0.0.0:9222 ./dist/index.js",
+		"start:dev": "node --inspect-brk=0.0.0.0:9222 -r ts-node/register ./src/index.ts",
 		"build": "tsc -p .",
-		"test": "node --inspect=9229 ./node_modules/mocha/bin/_mocha -r ts-node/register --timeout 999999 --colors tests/index.ts"
+		"test": "node --inspect-brk=0.0.0.0:9229 ./node_modules/mocha/bin/_mocha -r ts-node/register --timeout 999999 --colors tests/index.ts"
 	},
 	"keywords": [],
 	"author": "Amir Al-Omari",
 	"license": "UNLICENSED",
 	"dependencies": {
 		"body-parser": "^1.19.0",
-		"express": "^4.16.4",
+		"express": "^4.17.0",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.5.5",
+		"mongoose": "^5.5.11",
 		"typescript": "^3.4.5"
 	},
 	"devDependencies": {
@@ -25,8 +25,8 @@
 		"@types/express": "^4.16.1",
 		"@types/jsonwebtoken": "^8.3.2",
 		"@types/mocha": "^5.2.6",
-		"@types/mongoose": "^5.3.27",
-		"@types/node": "^12.0.0",
+		"@types/mongoose": "^5.5.1",
+		"@types/node": "^12.0.2",
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
 		"mocha": "^6.1.4",
