--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"start:dev": "node --inspect-brk=0.0.0.0:9222 -r ts-node/register ./src/index.ts",
 		"build": "tsc -p .",
 		"test": "node --inspect-brk=0.0.0.0:9229 ./node_modules/mocha/bin/_mocha -r ts-node/register --timeout 999999 --colors tests/index.ts",
-		"prettier": "prettier --write \"./**/*.{js,ts,json}\" \"!./dist/**\""
+		"prettier": "prettier --write \"./**/*.{js,ts,json}\" \"!./dist/**\"",
+		"tslint": "tslint -p .",
+		"pre-commit": "npm run prettier && npm run tslint"
 	},
 	"keywords": [],
 	"author": "Amir Al-Omari",
@@ -32,6 +34,7 @@
 		"chai-http": "^4.3.0",
 		"mocha": "^6.1.4",
 		"prettier": "1.17.1",
-		"ts-node": "^8.1.0"
+		"ts-node": "^8.1.0",
+		"tslint": "^5.16.0"
 	}
 }
