--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"build": "tsc -p .",
 		"test": "node --inspect-brk=0.0.0.0:9229 ./node_modules/mocha/bin/_mocha -r ts-node/register --timeout 999999 --colors tests/index.ts",
 		"prettier": "prettier --write \"./**/*.{js,ts,json}\" \"!./dist/**\"",
-		"tslint": "tslint -p .",
+		"tslint": "tslint --fix --force -p .",
 		"pre-commit": "npm run prettier && npm run tslint"
 	},
 	"keywords": [],
