--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,11 @@
 pipeline {
-	agent { docker { image 'node:12' } }
+	agent { docker { image 'node:10.15.3' } }
 	stages {
 		stage('build') {
 			steps {
-				bat 'npm --version'
+				nodejs(nodeJSInstallationName: 'Node 10.15.3') {
+                    bat 'npm run build'
+                }
 			}
 		}
 	}
